k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blog
  labels:
    name: blog
    pod-security.kubernetes.io/enforce: restricted
