k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: blog
  labels:
    app: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      automountServiceAccountToken: false
      containers:
        - name: blog
          image: projects.corybuecker.dev/corybuecker/blog@sha256:389d8b61cf1d84ac6678ea63da9250569819c8d8abf13d6fce4aa179d2e564d5
          ports:
            - name: http
              containerPort: 8000
          resources:
            limits:
              memory: 128M
              cpu: 75m
            requests:
              memory: 128M
              cpu: 75m
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: http
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: http
            periodSeconds: 10
