k8s/http_route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blog
  namespace: blog
spec:
  parentRefs:
    - kind: Gateway
      name: blog
      namespace: blog
  hostnames:
    - corybuecker.dev
    - www.corybuecker.dev
  rules:
    - backendRefs:
        - name: blog
          namespace: blog
          port: 80
