k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blog
  namespace: blog
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: kube-system
  hostnames:
    - corybuecker.com
  rules:
    - backendRefs:
        - name: blog
          namespace: blog
          port: 80
