k8s/patch.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: blog
  namespace: blog
spec:
  routes:
    - kind: Rule
      match: Host(`corybuecker.com`)
      services:
        - kind: Service
          name: blog
          namespace: blog
          passHostHeader: true
          port: http
